[project]
name = 'pony-git'
version = '0.1.0'
description = "Git manager CLI"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "PonyPaPony" }]
license = {text = "MIT"}

keywords = [
    'cli',
    'git',
    'project',
    'developer-tools'
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/PonyPaPony/"
Repository = "https://github.com/PonyPaPony/PonyGM"
Issues = "https://github.com/PonyPaPony/PonyGM/issues"

[project.scripts]
pony-git = "pony_git.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pony_git*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"